--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test_db": "tape test NODE_ENV=test node test/db.test.js | tap-spec",
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "env2": "^2.2.2",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "nodemon": "^1.18.9",
